--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "tigeR"
+author: "Guangchuang Yu"
+date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+prettydoc::html_pretty:
+    toc: false
+    theme: cayman
+    highlight: github
 vignette: >
   %\VignetteIndexEntry{tigeR}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  %\usepackage[utf8]{inputenc}
 ---
 
 ```{r, include = FALSE}
@@ -15,5 +21,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(tigeR)
 ```
+# 1 Signature Discovery
+## 1.1 Gini_rank()
+By calculating the Gini index of different genes, you can get an overview of the classification efficiency of different genes.
