--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -26,15 +26,14 @@ library(tigeR)
 ## 1.1 Gini_rank()
 By calculating the Gini index of different genes, you can get an overview of the classification efficiency of different genes.
 ```
-Gini_rank()
+Gini_rank(MEL_GSE78220)
 ```
 ## 1.2 diff_gene()
-Return differential express genes.
+Return differential expression genes.
 ```
 diff_gene(MEL_GSE78220)
 ```
-## 1.2 wrapped method
-## 1.3 built-in method
+
 
 # 2 Response Prediction
 ## 2.1 Predict Response using existing Signatures
@@ -58,6 +57,7 @@ The function returns a trained model, after which the user can enter the patient
 
 See details in https:://github/YuLab-SMU/tigeR
 
+
 # 3 Tumor Microenviroment Deconvolution
 ## 3.1 CIBERSORT()
 CIBERSORT is an analytical tool from the Alizadeh Lab and Newman Lab to impute gene expression profiles and provide an estimation of the abundances of member cell types in a mixed cell population, using gene expression data.
@@ -76,6 +76,7 @@ parameter perm is the number of permutations
 parameter QN perform quantile normalization or not (TRUE/FALSE)
 
 CIBERSORT function will return a list which first element is the cell type proportion matrix and second element is a boxplot.
+
 
 # 4 Immunotherapy Response
 ## 4.1 Immunotherapy_Response()
