--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -37,7 +37,7 @@ diff_gene(MEL_GSE78220)
 ## 2.1 Predict Response using existing Signatures
 You can get a overall Signature score matrix of 23 Signatures in tigeR using predict_Signature() function
 ```
-result <- predict_Signature(extract_mtr('MEL_GSE78220'))
+result <- predict_Signature(MEL_GSE78220)
 ```
 ## 2.2 Predict Response using built-in functions in tigeR
 You can use functions build_NB_model, build_SVM_model, build_RF_model, build_CC_model, build_Adaboost_model, build_Logitboost_model, build_Logistics_model to build corresponding machine learning predictive models (naive Bayes models, Support vector machine model, random forest model, Cancerclass model, Adaboost model, Logitboost model, Logistics regression model). 
@@ -61,7 +61,7 @@ CIBERSORT is an analytical tool from the Alizadeh Lab and Newman Lab to impute g
 
 tigeR offer you an built-in function CIBERSORT() for estimation of the abundances of member cell types.
 ```
-CIBERSORT(sig_matrix = LM22, mix_matrix = extract_mtr('MEL_GSE78220'), perm = 0, QN = TRUE)
+CIBERSORT(sig_matrix = LM22, mix_matrix = MEL_GSE78220, perm = 0, QN = TRUE)
 ```
 parameter sig_matrix is a expression matrix of Signature genes from each type of immune cells
   LM22 is a matrix which contain expression of Signature genes of each type of immune cell
