--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -50,10 +50,10 @@ Gini_rank(MEL_GSE78220)
 
 ## 1.2 diff_gene()
 
-Return differential expression genes.
+Return differential expression genes which |log(FC)| > 1.5 and the P value < 0.05.
 
 ```         
-diff_gene(MEL_GSE78220)
+diff_gene(SE = MEL_GSE78220, threshold = c(1.5, 0.05))
 ```
 
 # 2 Response Prediction
