--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -205,7 +205,7 @@ result <- CIBERSORT(sig_matrix = LM22, SE = MEL_GSE78220, perm = 0, QN = TRUE)
 
 ### 4.1.3 parameter
 
- ***gene*** is the gene which you wanted.\
+ ***gene*** is the gene which you wanted.
  ***SE*** is a SummarizedExperiment(SE) which contain expression matrix and clinical information.
 
 ### 4.1.4 instance
@@ -229,13 +229,18 @@ Immunotherapy_Response(SE = MEL_GSE78220)
 ***Pre-Treament vs Post-Treatment***
 
 ```         
-plt_diff(gene = 'CD274', SE = MEL_GSE78220, type = 'Treatment') 
+plt_diff('CD274',MEL_GSE91061,'Treatment') +
+  ggtitle("Treatment vs UnTreatment") +
+  theme(plot.title = element_text(hjust = 0.5)) 
 ```
+![Screenshot](https://github.com/Chengxugorilla/tigeR/raw/main/man/figures/Treatment.png #pic_center)
 
 ***Responder vs Non-Responder***
 
 ```         
-plt_diff(gene = 'CD274', SE = MEL_GSE78220, type = 'Response')
+plt_diff('CD274',MEL_GSE91061,'Response') +
+  ggtitle("Responder vs Non-Responder") +
+  theme(plot.title = element_text(hjust = 0.5))
 ```
 
 ## 4.3 plt_surv()
@@ -253,7 +258,11 @@ plt_diff(gene = 'CD274', SE = MEL_GSE78220, type = 'Response')
 ### 4.3.3 instance
 
 ```         
-plt_surv(gene = 'CD274', SE = MEL_GSE78220)
+P <- plt_surv('CD274',MEL_GSE91061)
+P$plot <- P$plot +
+  ggtitle("Survival analysis") +
+  theme(plot.title = element_text(hjust = 0.5))
+P
 ```
 
 # 5 Dataloader
